# yoco

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
python/tests/: test_check.py  test_process.py
python/yoco/: __init__.py  check.py  process.py  utils.py
src/: lib.rs
src/tests/: test_all.py
src/tests/assets/: invalid.txt  valid.txt
